<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple UC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_viewtext_text">Hello world!Hello world!Hello world!</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="convert">Convert</string>
    <string name="prompt">Select a conversion</string>
    
    <string name="units">转换数值:</string>
    <string name="conversiontype">转换类型:</string>
    <string name="to">到</string>
    
    <string name="action">action</string>
    <string name="end">end</string>
    

</resources>
